--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Age calculator app</title>
-
+  <link rel="stylesheet" href="style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,20 +15,27 @@
   </style>
 </head>
 <body>
+  <div id="kulso-body">
+  <div id="container">
 
-  Day
-  DD
+    <div id="inputok">
+      
+      <input type="number" min="1" max="31" id="nap" class="input">
+      <label for="honap">f</label>
+      <input type="number" min="1" max="12" id="honap" class="input">
+      
+      <input type="number" min="1000" id="ev" class="input">
+    </div>
+    <div class="lineGomb">
+    <hr id="line">
+    <button id="button" onclick="gombNyom"><img src="assets/images/icon-arrow.svg" id="gombArrow"></button>
+    </div>
+    <div id="ido">
 
-  Month
-  MM
+    </div>
 
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
-  
+  </div>
+</div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
